--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,29 @@
 .App {
-  text-align: center;
+  text-align: left;
+  margin: 0;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.blue-header {
+  background: blue;
+  width: 100%;
+  height: 15vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.border-box {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  background: darkslategray;
+  width: 100%;
+  height: 85vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.display-box {
+  width: 75%;
+  height: 75%;
+  background: white;
+  display: flex;
+  justify-content: space-between;
 }
